# C_journal_count

./: CMakeLists.txt  README.md  main.c
